# ym2149-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  STREAMING_GUIDE.md  TODO.md  pre-commit-check.sh
crates/arkos-replayer/: Cargo.toml  README.md
crates/arkos-replayer/src/: channel_player.rs  effect_context.rs  effects.rs  expression.rs  fixed_point.rs  format.rs  lib.rs  parser.rs  player.rs  psg.rs  psg_registers.rs  psg_registers_converter.rs
crates/arkos-replayer/tests/: channel_player_parity.rs  psg_period_parity.rs  psg_registers_converter_parity.rs
crates/atari-audio/: Cargo.toml
crates/atari-audio/src/: lib.rs  machine.rs  mfp68901.rs  ste_dac.rs  tables.rs  ym2149.rs
crates/bevy_ym2149/: Cargo.toml  README.md
crates/bevy_ym2149/examples/: basic_playback.rs  demoscene.rs  feature_showcase.rs
crates/bevy_ym2149/src/: audio_bridge.rs  audio_output.rs  audio_reactive.rs  audio_sink.rs  audio_source.rs  chip_state.rs  diagnostics.rs  error.rs  events.rs  lib.rs  music_state.rs  oscilloscope.rs  patterns.rs  playback.rs  playlist.rs  plugin.rs  presets.rs  song_player.rs  spatial.rs  streaming.rs  synth.rs  uniforms.rs  visualization.rs  viz_builders.rs  viz_components.rs  viz_helpers.rs  viz_systems.rs
crates/bevy_ym2149/src/plugin/: config.rs  mod.rs  systems.rs
crates/bevy_ym2149/src/visualization/: builders.rs  helpers.rs  mod.rs  systems.rs
crates/bevy_ym2149/tests/: integration_playback.rs  plugin_behaviour.rs
crates/bevy_ym2149_examples/: Cargo.toml  README.md
crates/bevy_ym2149_examples/assets/fonts/: demoscene_font.image_font.ron  megadeth_font.image_font.ron
crates/bevy_ym2149_examples/assets/music/: sfx_explosion.ym  sfx_shot.ym
crates/bevy_ym2149_examples/assets/shaders/: crt_post.wgsl  cube_faces_singlepass.wgsl  logo_wave.wgsl  oldschool.wgsl
crates/bevy_ym2149_examples/examples/: advanced_example.rs  basic_example.rs  crossfade_example.rs  demoscene.rs  feature_showcase.rs  playlist_crossfade_example.rs  sndh_with_gist_sfx.rs  space_shooter.rs
crates/bevy_ym2149_examples/examples/demoscene/: config.rs  logo.rs  materials.rs  overlay.rs
crates/bevy_ym2149_examples/examples/space_shooter/: audio.rs  components.rs  config.rs  crt.rs  resources.rs  spawning.rs  systems.rs  ui.rs
crates/bevy_ym2149_examples/src/: gist_audio.rs  lib.rs
crates/bevy_ym2149_viz/: Cargo.toml  README.md
crates/bevy_ym2149_viz/src/: builders.rs  components.rs  helpers.rs  lib.rs  stack.rs  systems.rs  uniforms.rs
crates/ym-replayer/: Cargo.toml  README.md
crates/ym-replayer-cli/: Cargo.toml
crates/ym-replayer-cli/src/: args.rs  main.rs  player_factory.rs  streaming.rs  visualization.rs
crates/ym-replayer/src/: error.rs  lib.rs  main.rs
crates/ym-replayer/src/compression/: mod.rs
crates/ym-replayer/src/export/: mp3.rs  wav.rs
crates/ym-replayer/src/parser/: mod.rs  ym.rs
crates/ym-replayer/src/player/: effects_manager.rs  effects_pipeline.rs  frame_sequencer.rs  loader.rs  madmax_digidrums.rs  metadata.rs  mod.rs  sample_generation.rs  state.rs  timing.rs  tracker_player.rs  ym_player.rs
crates/ym2149-ay-replayer/: Cargo.toml  README.md
crates/ym2149-ay-replayer/examples/: log_ports.rs  stats.rs
crates/ym2149-ay-replayer/src/: error.rs  format.rs  lib.rs  machine.rs  parser.rs  player.rs
crates/ym2149-bevy/: Cargo.toml  README.md
crates/ym2149-bevy/examples/: basic_playback.rs
crates/ym2149-bevy/src/: audio_sink.rs  lib.rs  playback.rs  plugin.rs  visualization.rs
crates/ym2149-common/: Cargo.toml  README.md
crates/ym2149-common/src/: backend.rs  cached_player.rs  channel_state.rs  lib.rs  metadata.rs  player.rs  util.rs  visualization.rs
crates/ym2149-core/: ARCHITECTURE.md  Cargo.toml  README.md
crates/ym2149-core/benches/: chip.rs
crates/ym2149-core/examples/: chip_demo.rs  export.rs
crates/ym2149-core/src/: backend.rs  channel_state.rs  chip.rs  constants.rs  dc_filter.rs  generators.rs  lib.rs  main.rs  mixer.rs  psg_bank.rs  tables.rs  util.rs
crates/ym2149-core/src/compression/: mod.rs
crates/ym2149-core/src/export/: mod.rs  mp3.rs  wav.rs
crates/ym2149-core/src/replayer/: cycle_counter.rs  effects_manager.rs  madmax_digidrums.rs  mod.rs  vbl_sync.rs  ym_player.rs
crates/ym2149-core/src/softsynth/: mod.rs
crates/ym2149-core/src/streaming/: audio_device.rs  mod.rs  realtime.rs  ring_buffer.rs
crates/ym2149-core/src/ym2149/: chip.rs  dc_filter.rs  empiric_dac.rs  envelope.rs  generators.rs  mixer.rs  mod.rs  psg_bank.rs  registers.rs  tables.rs  tiny.rs
crates/ym2149-core/src/ym_loader/: loader.rs  mod.rs
crates/ym2149-core/src/ym_parser/: mod.rs  ym.rs  ym6.rs
crates/ym2149-gist-replayer/: Cargo.toml  README.md
crates/ym2149-gist-replayer/examples/: player.rs
crates/ym2149-gist-replayer/src/: lib.rs  player.rs
crates/ym2149-gist-replayer/src/gist/: driver.rs  gist_sound.rs  mod.rs  voice.rs
crates/ym2149-metadata/: Cargo.toml
crates/ym2149-metadata/src/: main.rs
crates/ym2149-replayer-cli/: Cargo.toml  README.md
crates/ym2149-replayer-cli/src/: args.rs  main.rs  player_factory.rs  playlist.rs  streaming.rs  visualization.rs  viz_helpers.rs
crates/ym2149-sndh-replayer/: Cargo.toml  HARDWARE_ACCURACY.md  README.md  SEEK_PROBLEM.md
crates/ym2149-sndh-replayer/src/: error.rs  ice.rs  lib.rs  lmc1992.rs  machine.rs  mfp68901.rs  parser.rs  player.rs  ste_dac.rs
crates/ym2149-softsynth/: Cargo.toml  README.md
crates/ym2149-softsynth/src/: lib.rs  softsynth_impl.rs
crates/ym2149-wasm/: Cargo.toml  README.md  npm-README.md
crates/ym2149-wasm/examples/: Digitest.aks  Doclands-TinyThings.aks  Intensity_200hz.sndh  README.md  index.html  simple-player.html  ym2149_wasm.js  ym2149_wasm_bg.wasm  ym2149_wasm_bg.wasm.d.ts
crates/ym2149-wasm/src/: lib.rs  metadata.rs
crates/ym2149-ym-replayer/: Cargo.toml  README.md
crates/ym2149-ym-replayer-cli/: Cargo.toml
crates/ym2149-ym-replayer-cli/src/: args.rs  main.rs  player_factory.rs  streaming.rs  visualization.rs
crates/ym2149-ym-replayer/src/: lib.rs
docs/: README.md  (+4 more)
(+6777 files in other folders)
