[workspace]
members = [
    "crates/ym2149-core",
    "crates/ym-replayer",
    "crates/ym-replayer-cli",
    "crates/ym-softsynth",
    "crates/bevy_ym2149",
    "crates/bevy_ym2149_examples",
    "crates/ym2149-bevy",
    "crates/bevy_ym2149_viz",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["slippyex"]
license = "MIT"
repository = "https://github.com/slippyex/ym2149-rs"
homepage = "https://github.com/slippyex/ym2149-rs"

[workspace.dependencies]
thiserror = "1.0"
rodio = "0.17"
parking_lot = "0.12"
delharc = "0.6"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
bitflags = "2.0"
approx = "0.5"
