[workspace]
members = [
    "crates/ym2149-core",
    "crates/ym2149-common",
    "crates/ym2149-ym-replayer",
    "crates/ym2149-replayer-cli",
    "crates/ym2149-softsynth",
    "crates/ym2149-arkos-replayer",
    "crates/ym2149-gist-replayer",
    "crates/bevy_ym2149",
    "crates/bevy_ym2149_examples",
    "crates/bevy_ym2149_viz",
    "crates/ym2149-wasm",
    "crates/ym2149-ay-replayer",
    "crates/ym2149-sndh-replayer",
    "crates/ym2149-metadata",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.88"
authors = ["slippyex"]
license = "MIT"
repository = "https://github.com/slippyex/ym2149-rs"
homepage = "https://ym2149-rs.org"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
rodio = "0.17"
parking_lot = "0.12"
delharc = "0.6"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.0"
approx = "0.5"
base64 = "0.22"
