[package]
name = "bevy_ym2149"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy audio plugin for YM2149 PSG emulator"

[features]
default = []

[dependencies]
ym2149 = { path = "../ym2149-core", version = "0.5", features = ["emulator", "ym-format", "replayer", "streaming"] }
bevy = { version = "0.17", features = ["bevy_audio"] }
bevy_mesh = "0.17"
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
parking_lot.workspace = true
anyhow = "1"
ron = "0.8"
hound = "3"
rodio = { version = "0.17", default-features = true }

[dev-dependencies]
bevy = { version = "0.17", features = ["bevy_audio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
