[package]
name = "bevy_ym2149"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy audio plugin for YM2149 PSG emulator"
keywords = ["bevy", "ym2149", "psg", "chiptune", "audio"]
categories = ["game-development", "multimedia::audio"]

[features]
default = []
[dependencies]
# Core YM2149 chip emulation (without streaming - we use Bevy audio instead)
ym2149 = { path = "../ym2149-core", version = "0.9" }
# YM file parsing and playback
ym2149_ym_replayer = { package = "ym2149-ym-replayer", path = "../ym2149-ym-replayer", version = "0.9" }
ym2149_arkos_replayer = { package = "ym2149-arkos-replayer", path = "../ym2149-arkos-replayer", version = "0.9" }
ym2149_ay_replayer = { package = "ym2149-ay-replayer", path = "../ym2149-ay-replayer", version = "0.9" }
ym2149_sndh_replayer = { package = "ym2149-sndh-replayer", path = "../ym2149-sndh-replayer", version = "0.9" }
ym2149_common = { package = "ym2149-common", path = "../ym2149-common", version = "0.9" }
bevy = { version = "0.17", features = ["bevy_audio"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
parking_lot.workspace = true
ron = "0.10"
# Note: rodio is provided by bevy_audio, no direct dependency needed

[dev-dependencies]
bevy = { version = "0.17", features = ["bevy_audio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
