[package]
name = "bevy_ym2149_viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Visualization systems for the bevy_ym2149 plugin (oscilloscope, spectrum, HUD)"

[dependencies]
bevy = { version = "0.17", features = ["bevy_ui"] }
bevy_ym2149 = { path = "../bevy_ym2149", version = "0.6" }
ym2149 = { path = "../ym2149-core", version = "0.6" }
