[package]
name = "ym-replayer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line player for YM chiptune files"

[[bin]]
name = "ym-replayer"
path = "src/main.rs"

[dependencies]
# Core YM2149 chip with streaming support
ym2149 = { path = "../ym2149-core", version = "0.6.0", features = ["streaming", "visualization"] }

# YM file parsing and playback (no streaming needed here - CLI handles it)
ym-replayer = { path = "../ym-replayer", version = "0.6.0" }

# Arkos Tracker replayer
arkos-replayer = { path = "../arkos-replayer", version = "0.6.0" }

# Optional softsynth backend
ym-softsynth = { path = "../ym-softsynth", version = "0.6.0", optional = true }

# Synchronization
parking_lot.workspace = true

[features]
default = []

# Softsynth backend support (experimental)
softsynth = ["dep:ym-softsynth"]
