[package]
name = "ym2149-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bevy audio plugin for YM2149 PSG emulator"

[dependencies]
ym2149 = { path = "../ym2149-core", version = "0.5", features = ["emulator", "ym-format", "replayer", "streaming"] }
bevy = { version = "0.17", features = ["bevy_audio"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
parking_lot.workspace = true

[dev-dependencies]
bevy = { version = "0.17", features = ["bevy_audio", "bevy_render", "x11"] }
