[package]
name = "ym2149-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "[DEPRECATED] Bevy audio plugin for YM2149 PSG emulator - Use 'bevy_ym2149' instead"
rust-version = "1.70"

[dependencies]
bevy_ym2149 = { path = "../bevy_ym2149", version = "0.5" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
