[package]
name = "ym2149"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cycle-accurate YM2149 PSG emulator with real-time streaming audio output"
documentation = "https://docs.rs/ym2149"
readme = "README.md"
keywords = ["emulator", "ym2149", "psg", "atari", "sound"]
categories = ["emulators", "multimedia::audio"]

[dependencies]
# Error handling
thiserror.workspace = true

# Audio output (streaming feature)
rodio = { workspace = true, optional = true }

# Synchronization
parking_lot.workspace = true

# Utilities
bitflags.workspace = true

[dev-dependencies]
# Testing utilities
approx.workspace = true
criterion = { version = "0.7.0", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: Only the core emulator (zero non-essential dependencies)
default = ["emulator"]

# Core YM2149 emulator
emulator = []

# Streaming audio output (enables rodio-based AudioDevice)
streaming = ["dep:rodio"]

# Terminal visualization helpers
visualization = []

[[bench]]
name = "chip"
harness = false

[[example]]
name = "chip_demo"
path = "examples/chip_demo.rs"
required-features = ["streaming"]
