[package]
name = "ym2149"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cycle-accurate YM2149 PSG emulator"
documentation = "https://docs.rs/ym2149"
readme = "README.md"
keywords = ["emulator", "ym2149", "psg", "chiptune", "atari"]
categories = ["emulators", "multimedia::audio"]

[dependencies]
# Error handling
thiserror.workspace = true
# Shared traits (Ym2149Backend)
ym2149-common = { path = "../ym2149-common", version = "0.8" }

[dev-dependencies]
# Testing utilities
approx.workspace = true
criterion = { version = "0.7.0", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default: Only the core emulator (zero non-essential dependencies)
default = ["emulator"]

# Core YM2149 emulator
emulator = []

[[bench]]
name = "chip"
harness = false
