[package]
name = "ym2149-replayer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line player for YM chiptune files"

[[bin]]
name = "ym-replayer"
path = "src/main.rs"

[dependencies]
# Core YM2149 chip emulation (pure chip only, no streaming)
ym2149 = { path = "../ym2149-core", version = "0.7" }

# YM file parsing and playback
ym2149_ym_replayer = { package = "ym2149-ym-replayer", path = "../ym2149-ym-replayer", version = "0.7" }

# Arkos Tracker replayer
ym2149_arkos_replayer = { package = "ym2149-arkos-replayer", path = "../ym2149-arkos-replayer", version = "0.7" }

# AY format replayer
ym2149_ay_replayer = { package = "ym2149-ay-replayer", path = "../ym2149-ay-replayer", version = "0.7" }

# SNDH format replayer (Atari ST) - accurate 68000+YM2149 emulation
ym2149_sndh_replayer = { package = "ym2149-sndh-replayer", path = "../ym2149-sndh-replayer", version = "0.7" }

# Common types and traits
ym2149_common = { package = "ym2149-common", path = "../ym2149-common", version = "0.7" }

# Audio output
rodio.workspace = true

# Synchronization
parking_lot.workspace = true

[features]
default = []
softsynth = [] # workspace-only hook for experimental softsynth backends
