[package]
name = "ym2149-sndh-replayer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SNDH file parser and Atari ST machine emulation for YM2149 chiptune playback"
readme = "README.md"
documentation = "https://docs.rs/ym2149-sndh-replayer"
keywords = ["ym2149", "sndh", "atari", "chiptune", "68000"]
categories = ["multimedia::audio", "emulators", "parsing"]

[dependencies]
# Core YM2149 emulation
ym2149 = { path = "../ym2149-core", version = "0.9", default-features = false }

# Common traits (PlaybackMetadata, ChiptunePlayer)
ym2149-common = { path = "../ym2149-common", version = "0.9" }

# Motorola 68000 CPU emulation (r68k) - local path for development
# r68k = { path = "../../../r68k" }
r68k = "0.2"

# Error handling
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true

[features]
default = []

# Enable STE DAC emulation
ste-dac = []

# Debug logging for LMC1992 commands
lmc1992-debug = []
