[package]
name = "ym2149-ym-replayer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line player for YM chiptune files"

[[bin]]
name = "ym-replayer"
path = "src/main.rs"

[dependencies]
# Core YM2149 chip with streaming support
ym2149 = { path = "../ym2149-core", version = "0.6.1", features = ["streaming", "visualization"] }

# YM file parsing and playback (no streaming needed here - CLI handles it)
ym2149_ym_replayer = { package = "ym2149-ym-replayer", path = "../ym2149-ym-replayer", version = "0.6.1" }

# Arkos Tracker replayer
ym2149_arkos_replayer = { package = "ym2149-arkos-replayer", path = "../ym2149-arkos-replayer", version = "0.6.1" }

# AY format replayer
ym2149_ay_replayer = { package = "ym2149-ay-replayer", path = "../ym2149-ay-replayer", version = "0.6.1" }

# Synchronization
parking_lot.workspace = true

[features]
default = []
softsynth = [] # workspace-only hook for experimental softsynth backends
