[package]
name = "ym2149-ym-replayer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "YM file format parser and music replayer for YM2149 PSG"
documentation = "https://docs.rs/ym2149-ym-replayer"
readme = "README.md"
keywords = ["ym2149", "psg", "atari", "music", "chiptune"]
categories = ["multimedia::audio", "parser-implementations"]

[dependencies]
# Core YM2149 chip emulation (backend trait only - no streaming/visualization for library)
ym2149 = { path = "../ym2149-core", version = "0.6.0" }

# Error handling
thiserror.workspace = true

# Synchronization
parking_lot.workspace = true

# Compression support (LHA/LZH decompression for YM files)
delharc.workspace = true
tempfile.workspace = true

# Utilities
bitflags.workspace = true

# Export dependencies (optional)
hound = { version = "3.5", optional = true }
mp3lame-encoder = { version = "0.2", optional = true }

[dev-dependencies]
approx.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["effects", "tracker", "digidrums"]

# YM6 effects support (SID, Sync Buzzer)
effects = []

# Tracker mode support (YMT1/YMT2)
tracker = []

# Mad Max digi-drums support
digidrums = []

# Softsynth backend hook (workspace-only; no crates.io dependency)
softsynth = []

# Export functionality
export-wav = ["dep:hound"]
export-mp3 = ["dep:mp3lame-encoder"]
